<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_components"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_holder"
            android:layout_width="128dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/name_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            tools:src="@drawable/lifemove_logo_vector" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColorHint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_holder"
            app:layout_constraintHorizontal_bias="0.25"/>


        <EditText
            android:id="@+id/register_username_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_username"
            android:textColorHint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_field"
            app:layout_constraintHorizontal_bias="0.25"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username_field"
            app:layout_constraintHorizontal_bias="0.25" />

        <EditText
            android:id="@+id/register_password_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field"
            app:layout_constraintHorizontal_bias="0.25" />


        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_field"
            app:layout_constraintHorizontal_bias="0.25" />



        <Button
            android:id="@+id/sign_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/soft_highlight_rounded_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/prompt_create_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>