<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primary"
    android:orientation="vertical"
    tools:context=".view.PresentationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_components"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/presentation_logo_holder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/light_logo"
            />

        <TextView
            android:id="@+id/marketing_phrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_marketing_phrase"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="38sp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.33"
            />

        <Button
            android:id="@+id/presentation_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_width"
            android:paddingEnd="@dimen/button_side_padding"
            android:paddingStart="@dimen/button_side_padding"
            android:layout_marginTop="@dimen/action_button_top_margin"
            android:background="@drawable/light_rounded_button"
            android:text="@string/prompt_sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marketing_phrase"
            />

        <TextView
            android:id="@+id/first_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_first_time"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/presentation_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/presentation_sign_up"
            app:layout_constraintStart_toStartOf="@+id/presentation_sign_up" />

        <Button
            android:id="@+id/presentation_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="@dimen/action_button_bottom_margin"
            android:minWidth="@dimen/button_width"
            android:paddingEnd="@dimen/button_side_padding"
            android:paddingStart="@dimen/button_side_padding"
            android:background="@drawable/primary_rounded_button"
            android:text="@string/prompt_sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/presentation_sign_in"
            app:layout_constraintVertical_bias="0.33"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>