<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/event_card_shape"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/event_category_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.05"
        />

    <TextView
        android:id="@+id/event_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_title_placeholder"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/event_category_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/event_location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/event_location_placeholder"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/event_category_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_category_icon"
        app:layout_constraintBottom_toBottomOf="@id/event_category_icon"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/event_start_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_start_time_placeholder"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/event_category_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_location_view"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/event_end_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_end_time_placeholder"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/event_category_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_start_time_view"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <ImageView
        android:id="@+id/event_location_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/marker_icon"
        app:layout_constraintTop_toTopOf="@+id/event_location_view"
        app:layout_constraintBottom_toBottomOf="@+id/event_location_view"
        app:layout_constraintEnd_toStartOf="@id/event_location_view"
        />

    <ImageView
        android:id="@+id/event_start_time_icon"
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/clock_icon"
        app:layout_constraintTop_toTopOf="@+id/event_start_time_view"
        app:layout_constraintBottom_toBottomOf="@+id/event_start_time_view"
        app:layout_constraintEnd_toStartOf="@id/event_start_time_view"
        />

    <ImageView
        android:id="@+id/event_end_time_icon"
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/clock_icon"
        app:layout_constraintTop_toTopOf="@+id/event_end_time_view"
        app:layout_constraintBottom_toBottomOf="@+id/event_end_time_view"
        app:layout_constraintEnd_toStartOf="@id/event_end_time_view"
        />

    <Button
        android:id="@+id/event_join_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_join"
        android:textColor="@color/green"
        android:background="@drawable/event_card_shape"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_end_time_view"
        app:layout_constraintHorizontal_bias="0.0"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/event_dismiss_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_not_interested"
        android:textColor="@color/soft_red"
        android:background="@drawable/event_card_shape"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_end_time_view"
        app:layout_constraintHorizontal_bias="1.0"
        style="?android:attr/borderlessButtonStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>